k8s/policies/disallow-latest.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata: 
  name: disallow-latest-tag
spec:
  validationFailureAction: enforce
  background: false
  rules:
    - name: require-image-tag
      match:
        resources:
          kinds:
            - Pod
            - Deployment
      exclude:
        resources:
          names:
            - falco-test
      validate: 
        message: "No se permite usar imagenes con la etiqueta 'latest' "
        pattern:
          spec:
            containers:
              - image "!*:latest"
